--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
     "name": "photoshop",
     "version": "1.0.0",
     "description": "ecommerce webshop with checkout process",
-    "main": "index.js",
+    "main": "backend/build/server.js",
     "scripts": {
-        "start": "cd frontend && npm start",
+        "start:runFrontend": "cd frontend && npm start",
+        "start:buildBackend": "cd backend && tsc -w",
+        "start:runBackend": "nodemon backend/build/server.js",
+        "start": "concurrently npm:start:*",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
@@ -20,5 +23,13 @@
     "devDependencies": {
         "concurrently": "^5.3.0",
         "nodemon": "^2.0.4"
+    },
+    "dependencies": {
+        "@types/body-parser": "^1.19.0",
+        "@types/cookie-parser": "^1.4.2",
+        "@types/express": "^4.17.8",
+        "body-parser": "^1.19.0",
+        "cookie-session": "^1.4.0",
+        "express": "^4.17.1"
     }
 }
