--- a/package.json
+++ b/package.json
@@ -27,9 +27,15 @@
     "dependencies": {
         "@types/body-parser": "^1.19.0",
         "@types/cookie-parser": "^1.4.2",
+        "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.8",
+        "@types/mysql": "^2.15.15",
+        "@types/mysql2": "github:types/mysql2",
         "body-parser": "^1.19.0",
         "cookie-session": "^1.4.0",
-        "express": "^4.17.1"
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1",
+        "mysql": "^2.18.1",
+        "mysql2": "^2.2.5"
     }
 }
