--- a/package.json
+++ b/package.json
@@ -25,17 +25,17 @@
         "nodemon": "^2.0.4"
     },
     "dependencies": {
+        "@types/bcryptjs": "^2.4.2",
         "@types/body-parser": "^1.19.0",
-        "@types/cookie-parser": "^1.4.2",
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.8",
-        "@types/mysql": "^2.15.15",
+        "@types/jsonwebtoken": "^8.5.0",
         "@types/mysql2": "github:types/mysql2",
+        "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
-        "cookie-session": "^1.4.0",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
-        "mysql": "^2.18.1",
+        "jsonwebtoken": "^8.5.1",
         "mysql2": "^2.2.5"
     }
 }
